3.12.5.5 (XXXX-XX-XX)
---------------------

* Updated ArangoDB Starter to v0.19.13.

* Rebuilt included rclone v1.65.2 with go1.23.12 and non-vulnerable
  dependencies.

* Upgraded OpenSSL to 3.5.4.

* Fix BTS-2231: Fix a divide-by-zero crash in case a smart edge collection is used in a
  collect query with a custom index.


3.12.5.4 (2025-09-22)
---------------------

* Fix ES-2678: In the upgrade scenario, we disable the ClusterFeature.
  We should therefore check before accessing clusterInfo() whether we are in an
  upgrade scenario. Added those checks in iresearch.


3.12.5.3 (2025-09-09)
---------------------

* Fix BTS-2217: If an error happens during startup, a disabled feature can lead
  to a crash. Additionally signal that the server is stopping during the
  unexpected shutdown so that in particular the RocksDBSyncThread does not
  crash with an assertion failure.

* Fix BTS-2220: Fix failing autoupgrade of databases in cluster mode.
  This was caused by key generation now using the cluster key generator on
  dbservers, which fails during upgrade with a message that the database was
  shutting down.

* Fix unique _key generation in two cases: AQL INSERT operations in a loop
  without user specified _key in collections with exactly one shard or with
  multiple shard, non-standard sharding and `forceOneShardAttributeValue`.


3.12.5.2 (2025-08-01)
---------------------

* Fix BTS-2201: Make aggreate collect queries work again on an empty collection
	that has an	index used in the query.

* Fix miscounting bug for number of SynchronizeShard jobs scheduled.
  This fixes BTS-2202. The bug could show up as a dbserver not syncing its
  follower shards with the leader.


3.12.5.1 (2025-07-25)
---------------------

* Fix for null access for smallest range when no files on level (RocksDB).

* Fix BTS-2152 Overfetch input on parallel Traversals. For queries like this:

  FOR x IN largeCollection
    FOR v IN 1 OUTBOUND x edges {parallelism: 4}
      LIMIT 10