@@ -428,6 +428,10 @@ Result ExecutionBlockImpl<RemoteExecutor>::sendAsyncRequest(
         });
       });
 
+  TRI_IF_FAILURE("RemoteExecutor::sleepAfterRequest") {
+    std::this_thread::sleep_for(std::chrono::milliseconds(200));
+  }
+
   return {};
 }
 
