@@ -65,13 +65,13 @@ class RestSimpleHandler : public RestCursorHandler {
   /// @brief execute a batch remove operation
   //////////////////////////////////////////////////////////////////////////////
 
-  futures::Future<RestStatus> removeByKeys(VPackSlice const&);
+  RestStatus removeByKeys(VPackSlice const&);
 
   //////////////////////////////////////////////////////////////////////////////
   /// @brief execute a batch lookup operation
   //////////////////////////////////////////////////////////////////////////////
 
-  futures::Future<RestStatus> lookupByKeys(VPackSlice const&);
+  RestStatus lookupByKeys(VPackSlice const&);
 
  private:
   //////////////////////////////////////////////////////////////////////////////
